tests/fixtures/invalid/bool_bitxor_none.py
# Cannot bitwise XOR Bool and None
x: bool = True ^ None
